--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -532,7 +532,7 @@ service ppd /vendor/bin/mm-pp-dpps
 service dashd /sbin/dashd
     class core
     critical
-#    seclabel u:r:dashd:s0
+    seclabel u:r:dashd:s0
     group root system
 
 #ifdef VENDOR_EDIT
