--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -187,7 +187,20 @@ service secotad /system/vendor/bin/secotad
 #   user system
 #   group system
 #   disabled
-#
+
+service thermal-engine /system/vendor/bin/thermal-engine
+   class main
+   user root
+   socket thermal-send-client stream 0666 system system
+   socket thermal-recv-client stream 0660 system system
+   socket thermal-recv-passive-client stream 0666 system system
+   socket thermal-send-rule stream 0660 system system
+   group root system diag
+   socket thermal-send-client stream 0666 system system
+   socket thermal-recv-client stream 0660 system system
+   socket thermal-recv-passive-client stream 0666 system system
+   writepid /dev/cpuset/system-background/tasks
+
 #service security-check1 /sbin/security_boot_check system
 #    class core
 #    oneshot
