--- a/overlay/AOSPASystemUIOnePlusOverlay/AndroidManifest.xml
+++ b/overlay/AOSPASystemUIOnePlusOverlay/AndroidManifest.xml
@@ -14,10 +14,10 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="co.aospa.systemui.oneplus.overlay"
-        android:versionCode="1"
-        android:versionName="1.0">
-        <overlay android:targetPackage="com.android.systemui"
-		android:priority="800"
-		android:isStatic="true" />
+    package="co.aospa.systemui.oneplus.overlay">
+
+    <overlay
+        android:isStatic="true"
+        android:priority="800"
+        android:targetPackage="com.android.systemui" />
 </manifest>
