--- a/overlay/FrameworksOnePlus3Overlay/AndroidManifest.xml
+++ b/overlay/FrameworksOnePlus3Overlay/AndroidManifest.xml
@@ -14,12 +14,12 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="co.aospa.oneplus3.overlay"
-        android:versionCode="1"
-        android:versionName="1.0">
-        <overlay android:targetPackage="android"
-		android:requiredSystemPropertyName="ro.product.vendor.device"
-		android:requiredSystemPropertyValue="OnePlus3"
-		android:priority="800"
-		android:isStatic="true" />
+    package="co.aospa.oneplus3.overlay">
+
+    <overlay
+        android:isStatic="true"
+        android:priority="800"
+        android:requiredSystemPropertyName="ro.product.vendor.device"
+        android:requiredSystemPropertyValue="OnePlus3"
+        android:targetPackage="android" />
 </manifest>
