--- a/overlay/FrameworksOnePlusOverlay/AndroidManifest.xml
+++ b/overlay/FrameworksOnePlusOverlay/AndroidManifest.xml
@@ -14,10 +14,10 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.android.oneplus.overlay"
-        android:versionCode="1"
-        android:versionName="1.0">
-        <overlay android:targetPackage="android"
-		android:priority="800"
-		android:isStatic="true" />
+    package="com.android.oneplus.overlay">
+
+    <overlay
+        android:isStatic="true"
+        android:priority="800"
+        android:targetPackage="android" />
 </manifest>
